--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -31,7 +31,7 @@
           <th mat-header-cell *matHeaderCellDef
             i18n="Name of table header for price per product unit">Price</th>
           <td mat-cell *matCellDef="let product">
-            ${{ product.price }}
+            {{ product.price | currency }}
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
@@ -75,7 +75,7 @@
         <th mat-header-cell *matHeaderCellDef
           i18n="Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
-          ${{ product.price }}
+          {{ product.price | currency }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
