--- a/src/app/management/routes/products/management-products.component.html
+++ b/src/app/management/routes/products/management-products.component.html
@@ -29,7 +29,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
-          ${{ product.price }}
+          {{ product.price | currency }}
         </td>
       </ng-container>
       <!-- <ng-container matColumnDef="currentStock">
