--- a/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
+++ b/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
@@ -20,7 +20,7 @@
       <span i18n="Name of table header for price per product unit">Price</span>
     </th>
     <td mat-cell *matCellDef="let detail" class="center">
-      <span>${{ detail.product.price }}</span>
+      <span>{{ detail.product.price | currency }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="quantity">
@@ -50,7 +50,7 @@
       <span i18n="Name of table header for the value of product price x units in cart">Subtotal</span>
     </th>
     <td mat-cell *matCellDef="let detail">
-      <span>${{ detail.product.price * detail.units }}</span>
+      <span>{{ (detail.product.price * detail.units) | currency }}</span>
     </td>
   </ng-container>
   <ng-container matColumnDef="actions">
