--- a/src/app/store/components/header/navigation/store-header-navigation.component.html
+++ b/src/app/store/components/header/navigation/store-header-navigation.component.html
@@ -17,7 +17,7 @@
     <mat-icon>shopping_cart</mat-icon>
     <span class="cart-summary">
       <span>{{ cartItemCountLabel$ | async }}</span>
-      <span>${{ cartNetValue$ | async }}</span>
+      <span>{{ (cartNetValue$ | async) | currency }}</span>
     </span>
   </a>
 </ng-container>
