--- a/src/app/store/components/product-card/store-product-card.component.html
+++ b/src/app/store/components/product-card/store-product-card.component.html
@@ -16,7 +16,7 @@
       [alt]="product.name" />
   </div>
   <div class="actions">
-    <span class="price">${{ product.price }}</span>
+    <span class="price">{{ product.price | currency }}</span>
     <button mat-button mat-raised-button type="button"
       class="add-to-cart"
       color="primary"
