--- a/src/app/shared/components/product-list-form/product-list-form.component.html
+++ b/src/app/shared/components/product-list-form/product-list-form.component.html
@@ -19,10 +19,8 @@
       i18n-placeholder="Name of field for the name of a list" />
   </mat-form-field>
 
-  <mat-form-field class="totalCount">
-    <input matInput formControlName="totalCount" type="hidden"
-      placeholder="Count"
-      i18n-placeholder="Name of field for the amount of items in a list" />
-  </mat-form-field>
+  <input formControlName="totalCount" type="hidden"
+    placeholder="Count"
+    i18n-placeholder="Name of field for the amount of items in a list" />
 
 </form>
