--- a/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
+++ b/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title i18n="Title of dialog prompt to add products into details of a sell">Add Products</h2>
+<h2 mat-dialog-title>{{ data.list.name }}</h2>
 <app-centered-mat-spinner *ngIf="loading$ | async">
 </app-centered-mat-spinner>
 
@@ -62,7 +62,7 @@
     <button mat-button mat-raised-button type="button"
       color="primary"
       (click)="onClickChooseProducts()"
-      i18n="choose products for list|Label for action button to start selecting products to replace a list's contents with">Replace</button>
+      i18n="choose products for list|Label for action button to start selecting products to replace a list's contents with">Replace all</button>
     <button mat-button mat-raised-button type="button"
       [disabled]="isArrayEmpty$ | async"
       mat-dialog-close
