feat: add component to display contents of a list

--- a/src/app/store/components/product-display/store-product-display.component.html
+++ b/src/app/store/components/product-display/store-product-display.component.html
@@ -24,6 +24,8 @@
     (page)="onPage($event)"
     [showFirstLastButtons]="true"
     [pageSizeOptions]="pageSizeOptions"
+    [pageIndex]="pageIndex"
+    [pageSize]="pageSize"
     [length]="totalCount">
   </mat-paginator>
 </div>
