--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -19,12 +19,19 @@
     </app-product-filters-panel>
 
     <div class="product-table-wrapper">
-      <table mat-table [dataSource]="filteredProductsArray$">
+      <table mat-table [dataSource]="availableProducts$">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef
             i18n="product name|Name of table header for name of product">Name</th>
           <td mat-cell *matCellDef="let product">
             {{ product.name }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="barcode">
+          <th mat-header-cell *matHeaderCellDef
+            i18n="product barcode|Name of table header for barcode of product">Barcode</th>
+          <td mat-cell *matCellDef="let product">
+            {{ product.barcode }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
@@ -51,60 +58,75 @@
         <tr mat-row *matRowDef="let row; columns: productTableColumns;"></tr>
       </table>
     </div>
+    <div>
+      <mat-paginator
+        (page)="onPage($event)"
+        [showFirstLastButtons]="true"
+        [pageSizeOptions]="pageSizeOptions"
+        [length]="totalCount$ | async">
+      </mat-paginator>
+    </div>
 
   </mat-expansion-panel>
-</div>
 
-<mat-card>
+  <mat-card>
 
-  <mat-card-header>
-    <mat-card-title
-      i18n="Title of widget displaying products marked for addition to details of a sell">Selected Products</mat-card-title>
-  </mat-card-header>
+    <mat-card-header>
+      <mat-card-title
+        i18n="Title of widget displaying products marked for addition to details of a sell">Selected Products</mat-card-title>
+    </mat-card-header>
 
-  <mat-card-content class="product-table-wrapper">
-    <table mat-table [dataSource]="productsArray$">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef
-          i18n="product name|Name of table header for name of product">Name</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.name }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef
-          i18n="Name of table header for price per product unit">Price</th>
-        <td mat-cell *matCellDef="let product">
-          {{ product.price | currency }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let i=index">
-          <div class="acciones">
-            <button mat-button mat-icon-button type="button"
-              color="warn"
-              aria-label="Don't add this product"
-              i18n-aria-label="dont add this product|Label for action button to unmark a product for addition details of a sell"
-              (click)="onClickDropProduct(i)">
-              <mat-icon>remove</mat-icon>
-            </button>
-          </div>
-        </td>
-      </ng-container>
+    <mat-card-content class="product-table-wrapper">
+      <table mat-table [dataSource]="productsArray$">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef
+            i18n="product name|Name of table header for name of product">Name</th>
+          <td mat-cell *matCellDef="let product">
+            {{ product.name }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="barcode">
+          <th mat-header-cell *matHeaderCellDef
+            i18n="product barcode|Name of table header for barcode of product">Barcode</th>
+          <td mat-cell *matCellDef="let product">
+            {{ product.barcode }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef
+            i18n="Name of table header for price per product unit">Price</th>
+          <td mat-cell *matCellDef="let product">
+            {{ product.price | currency }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> </th>
+          <td mat-cell *matCellDef="let i=index">
+            <div class="acciones">
+              <button mat-button mat-icon-button type="button"
+                color="warn"
+                aria-label="Don't add this product"
+                i18n-aria-label="dont add this product|Label for action button to unmark a product for addition details of a sell"
+                (click)="onClickDropProduct(i)">
+                <mat-icon>remove</mat-icon>
+              </button>
+            </div>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="productTableColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: productTableColumns;"></tr>
-    </table>
-  </mat-card-content>
-</mat-card>
-<div class="actions">
-  <button mat-button mat-raised-button type="button"
-    color="primary"
-    [disabled]="isArrayEmpty$ | async"
-    [mat-dialog-close]="productsArray$ | async"
-    i18n="confirm|Label for action button to accept and proceed">Confirm</button>
-  <button mat-button mat-raised-button type="button"
-    [mat-dialog-close]="[]"
-    i18n="cancel|Label for action button to cancel and/or stop an operation">Cancel</button>
+        <tr mat-header-row *matHeaderRowDef="productTableColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: productTableColumns;"></tr>
+      </table>
+    </mat-card-content>
+  </mat-card>
+  <div class="actions">
+    <button mat-button mat-raised-button type="button"
+      color="primary"
+      [disabled]="isArrayEmpty$ | async"
+      [mat-dialog-close]="productsArray$ | async"
+      i18n="confirm|Label for action button to accept and proceed">Confirm</button>
+    <button mat-button mat-raised-button type="button"
+      mat-dialog-close
+      i18n="cancel|Label for action button to cancel and/or stop an operation">Cancel</button>
+  </div>
 </div>
