--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -19,23 +19,23 @@
     </app-product-filters-panel>
 
     <div class="product-table-wrapper">
-      <table mat-table [dataSource]="availableProducts$">
+      <table mat-table [dataSource]="availableProducts$" matSort (matSortChange)="onSortChange($event)">
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef
+          <th mat-header-cell *matHeaderCellDef mat-sort-header
             i18n="product name|Name of table header for name of product">Name</th>
           <td mat-cell *matCellDef="let product">
             {{ product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="barcode">
-          <th mat-header-cell *matHeaderCellDef
+          <th mat-header-cell *matHeaderCellDef mat-sort-header
             i18n="product barcode|Name of table header for barcode of product">Barcode</th>
           <td mat-cell *matCellDef="let product">
             {{ product.barcode }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef
+          <th mat-header-cell *matHeaderCellDef mat-sort-header
             i18n="Name of table header for price per product unit">Price</th>
           <td mat-cell *matCellDef="let product">
             {{ product.price | currency }}
