--- a/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
+++ b/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
@@ -20,11 +20,18 @@
           {{ product.name }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header=""
+      <ng-container matColumnDef="barcode">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
+          i18n="product code|Name of table header for code of product">Code</th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.barcode }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
-          {{ product.code }}
+          {{ product.price | currency }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
