--- a/src/app/management/routes/customers/management-customers.component.css
+++ b/src/app/management/routes/customers/management-customers.component.css
@@ -4,3 +4,10 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
+
+.mat-column-name {
+  min-width: 8rem;
+}
+.mat-column-idNumber {
+  min-width: 8rem;
+}
