--- a/src/app/management/routes/products/management-products.component.css
+++ b/src/app/management/routes/products/management-products.component.css
@@ -5,24 +5,15 @@
  * https://opensource.org/licenses/MIT
  */
 
-.mat-column-name {
-  max-width: 100%;
+.mat-column-name,
+.mat-column-barcode,
+.mat-column-price,
+/* .mat-column-currentStock,
+.mat-column-criticalStock, */
+.mat-column-category {
+  min-width: 6rem;
 }
-.mat-column-barcode {
-  max-width: 8rem;
-}
-.mat-column-price {
-  max-width: 9rem;
-  text-align: center;
-}
-/* .mat-column-currentStock {
-  max-width: 9rem;
-  text-align: center;
-}
-.mat-column-criticalStock {
-  max-width: 9rem;
-  text-align: center;
-} */
-.mat-column-type {
-  max-width: 100%;
+.mat-column-actions {
+  min-width: 6rem;
+  width: 6rem;
 }
