--- a/src/app/management/routes/shippers/management-shippers.component.css
+++ b/src/app/management/routes/shippers/management-shippers.component.css
@@ -6,10 +6,5 @@
  */
 
 .mat-column-name {
-  max-width: 100%;
-}
-
-.mat-column-idNumber {
-  text-align: center;
-  max-width: 8rem;
+  min-width: 8rem;
 }
