--- a/src/app/management/routes/sales/management-sales.component.html
+++ b/src/app/management/routes/sales/management-sales.component.html
@@ -22,7 +22,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for date and time of sell">Date and time</th>
         <td mat-cell *matCellDef="let sell">
-          {{ sell.date }}
+          {{ sell.date | date:'short' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="customer">
