--- a/src/app/store/routes/receipt/store-receipt.component.html
+++ b/src/app/store/routes/receipt/store-receipt.component.html
@@ -11,7 +11,7 @@
   <mat-card>
     <div class="icon-wrapper" aria-hidden="true"><mat-icon>receipt_long</mat-icon></div>
     <h2 mat-card-title i18n="Title of widget displaying details of a succesful transaction">Transaction Successful</h2>
-    <p i18n="Label with transaction confirmation date">Confirmed on {{ receipt.date | date }}</p>
+    <p i18n="Label with transaction confirmation date">Confirmed on {{ receipt.date | date:'short' }}</p>
     <p i18n="Label with total count of items in transaction being {{ receipt.totalItems }}">Total items: {{ receipt.totalItems }}</p>
     <p *ngIf="receipt.transportValue" i18n="Label with total price of transport being {{ receipt.transportValue }}">Transport: {{ receipt.transportValue | currency }}</p>
     <p *ngIf="receipt.taxValue" i18n="Label with total price of taxes being {{ receipt.taxValue }}">Taxes: {{ receipt.taxValue | currency }}</p>
