chore: fix translation marks

--- a/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
+++ b/src/app/management/dialogs/product-list-contents/product-list-contents-dialog.component.html
@@ -22,7 +22,7 @@
       </ng-container>
       <ng-container matColumnDef="barcode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
-          i18n="product code|Name of table header for code of product">Code</th>
+          i18n="product barcode|Name of table header for barcode of product">Barcode</th>
         <td mat-cell *matCellDef="let product">
           {{ product.barcode }}
         </td>
