style: add heading to component

--- a/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
+++ b/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
@@ -5,6 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
+<h3>{{ list.name }}</h3>
 <app-store-product-display
   [products]="products$ | async"
   [totalCount]="totalCount$ | async"
