--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -21,6 +21,7 @@
   <div class="footer">
     <span class="price">{{ product.price | currency }}</span>
     <button mat-button mat-raised-button type="button"
+      *ngIf="showAddToCartButton"
       class="add-to-cart"
       color="primary"
       (click)="onClickAddProduct()">
