fix: add products to cart
rewire components according to latest refactor

--- a/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
+++ b/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
@@ -6,10 +6,12 @@
 -->
 
 <h3>{{ list.name }}</h3>
-<app-store-product-display
+<app-products-display
   [products]="products$ | async"
   [totalCount]="totalCount$ | async"
   [pageIndex]="pageIndex"
   [pageSize]="pageSize"
-  (page)="onPage($event)">
-</app-store-product-display>
+  [showAddToCartButtons]="true"
+  (page)="onPage($event)"
+  (addProductToCart)="onAddProductToCart($event)">
+</app-products-display>
