--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -13,6 +13,7 @@
 <div class="products" [hidden]="loading$ | async">
   <app-store-product-list-contents-display
     *ngFor="let list of (lists$ | async)"
-    [list]="list">
+    [list]="list"
+    (addProductToCart)="onAddProductToCart($event)">
   </app-store-product-list-contents-display>
 </div>
