--- a/src/assets/mixins/store-catalog.component.scss
+++ b/src/assets/mixins/store-catalog.component.scss
@@ -4,6 +4,7 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
+@use '~@angular/material' as mat;
 
 @import '~@angular/material/theming';
 
@@ -13,8 +14,8 @@
   $accent: map-get($config, accent);
 
   app-store-catalog h2 {
-    background-color: mat-color($primary, 50);
-    color: mat-color($primary);
+    background-color: mat.get-color-from-palette($primary, 50);
+    color: mat.get-color-from-palette($primary);
   }
 }
 
