--- a/src/assets/mixins/sidenav.component.scss
+++ b/src/assets/mixins/sidenav.component.scss
@@ -4,6 +4,7 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
+@use '~@angular/material' as mat;
 
 @import '~@angular/material/theming';
 
@@ -13,7 +14,7 @@
   $accent: map-get($config, accent);
 
   mat-sidenav {
-    background-color: mat-color($primary) !important;
+    background-color: mat.get-color-from-palette($primary) !important;
     color: white !important;
   }
 
