--- a/src/assets/mixins/footer.component.scss
+++ b/src/assets/mixins/footer.component.scss
@@ -4,9 +4,9 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 @mixin footer-color($theme) {
   $config: mat-get-color-config($theme);
