--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -8,12 +8,25 @@
 <h2 i18n="Title of page for the storefront">Store Frontpage</h2>
 <app-centered-mat-spinner *ngIf="loading$ | async">
 </app-centered-mat-spinner>
+<div class="top banners">
+  <app-slideshow
+    [images]="storeCatalogTopBannerImages">
+  </app-slideshow>
+</div>
 <div class="products" [hidden]="loading$ | async">
   <app-store-product-list-contents-display
     *ngFor="let list of (lists$ | async)"
     [list]="list"
     (addProductToCart)="onAddProductToCart($event)">
   </app-store-product-list-contents-display>
+</div>
+<mat-divider></mat-divider>
+<div class="bottom banners">
+  <app-slideshow
+    [showSlideSelectors]="false"
+    [showNextPreviousButtons]="false"
+    [images]="storeCatalogBottomBannerImages">
+  </app-slideshow>
 </div>
 <mat-divider></mat-divider>
 <div class="location">
