--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 i18n="Title of page for the storefront">Store Frontpage</h2>
+<!-- <h2 i18n="Title of page for the storefront">Store Frontpage</h2> -->
 <app-centered-mat-spinner *ngIf="loading$ | async">
 </app-centered-mat-spinner>
 <div class="top banners">
