--- a/src/app/store/components/header/store-header.component.css
+++ b/src/app/store/components/header/store-header.component.css
@@ -20,11 +20,32 @@ app-store-header-navigation {
   flex: 0 0 auto;
 }
 
+.middle {
+  display: none;
+}
+
 app-store-header-middle {
   flex: 1 1 auto;
 }
 
 app-store-header-menu,
 app-store-header-login-button {
+  margin-left: auto;
   flex: 0 0 auto;
+}
+
+@media(min-width: 641px) {
+  .middle {
+    width: 100%;
+    display: inline;
+    position: absolute;
+    text-align: center;
+    align-self: center;
+  }
+}
+
+@media(min-width: 1008px) {
+  .middle {
+    font-size: 1.75rem;
+  }
 }
