--- a/src/app/management/routes/product-lists/management-product-lists.component.html
+++ b/src/app/management/routes/product-lists/management-product-lists.component.html
@@ -29,7 +29,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="product list total count|Name of table header for total count of products in a list">Count</th>
         <td mat-cell *matCellDef="let productList">
-          {{ productList.totalCount }}
+          {{ productList.totalCount || 0 }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
