--- a/src/app/store/components/header/store-header.component.css
+++ b/src/app/store/components/header/store-header.component.css
@@ -22,7 +22,7 @@ app-store-header-navigation {
 
 app-store-header-search-form {
   flex: 1 1 auto;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   align-self: center;
 }
 
@@ -32,6 +32,18 @@ app-store-header-login-button {
   flex: 0 0 auto;
 }
 
+@media(max-width: 640px) {
+  :host {
+    flex-flow: row wrap;
+  }
+
+  app-store-header-search-form {
+    flex: 1 1 100%;
+    order: 5;
+    height: 120px;
+  }
+}
+
 @media(min-width: 641px) {
   .middle {
     width: 100%;
@@ -39,6 +51,10 @@ app-store-header-login-button {
     position: absolute;
     text-align: center;
     align-self: center;
+  }
+
+  app-store-header-search-form {
+    margin: 0 1rem;
   }
 }
 
